# telegram-bot-crewai

./: .env.example  README.md  appointments.json  pyproject.toml
src/telegram_bot_crewai/: README.md  bot.py  crew.py  main.py
src/telegram_bot_crewai/config/: agents.yaml  tasks.yaml
src/telegram_bot_crewai/tools/: appointment_tool.py  weather_tool.py  web_search_tool.py
